--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,12 @@
       <version>2.5.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.8</version>
+    </dependency>
+
 
   </dependencies>
 
